--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Updates/All offers/test.py
 Updates/All offers/mumz_val.py
 Updates/All offers/helpers.py
 Updates/All offers/test.ipynb
+Updates/All offers/request_playwright_habib.py
