--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Updates/All offers/mumz_val.py
 Updates/All offers/helpers.py
 Updates/All offers/test.ipynb
 Updates/All offers/request_playwright_habib.py
+/Updates/Input data
