--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Updates/All offers/helpers.py
 Updates/All offers/test.ipynb
 Updates/All offers/request_playwright_habib.py
 /Updates/Input data
+/Updates/Output Data
